# JoTang2025

./: README.md
 机器学习Task1/: Readme.md  make_moons.py
加分项task1/: .process_moon.cpp.swp  CMakeLists.txt  Readme.md  demo.cpp  fetch_moon.py  moons.csv  process_moon.cpp
加分项task4/: Embedding.py  Readme.md  ngram.py  手工Embedding.py
机器学习Task0/: Readme.md
机器学习Task2/: Readme.md
机器学习Task2/ 分类任务/: Iris.py  titanic.py
机器学习Task2/回归任务/: california .py
机器学习Task3/Code/: data.py  model.py  q1_test.py  q1_train.py  q2.py  q3.py
机器学习Task3/results/: Readme.md  q1_model.pt  q1_result.txt
机器学习Task4/: BERT.py  Readme.md
机器学习Warm Up!/Linux学习笔记/: Readme.md
机器学习Warm Up!/Makefile&Cmake学习笔记/: Readme.md
机器学习Warm Up!/Makefile&Cmake学习笔记/个人练习/: CMakeLists.txt
机器学习Warm Up!/Makefile&Cmake学习笔记/个人练习/include/: func.hpp
机器学习Warm Up!/Makefile&Cmake学习笔记/个人练习/src/: main.cpp
